# messenger

./: .env  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
backend_src/: Dockerfile  main.py  routes.py
backend_src/auth/: depends.py  routes.py  schemas.py  services.py  utils.py
backend_src/auth/jwt_module/: creator.py  depends.py
backend_src/core/: config.py  redis_conf.py
backend_src/database/: __init__.py
backend_src/database/models/: auth.py
backend_src/modules/: __init__.py
backend_src/modules/chat/: routes.py  schemas.py  services.py
backend_src/modules/files/: routes.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: Auth.js  Chats.js
frontend/src/components/: AppRouter.jsx
frontend/src/components/ChatPage/: FileIcon.jsx
frontend/src/components/UI/: Input.jsx
frontend/src/pages/: Auth.jsx  ChatPage.jsx  MainPage.jsx
frontend/src/redux/: loginSlice.js  store.js
frontend/src/routes/: index.js
