[project]
name = "messenger-mirea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.1.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
]
